--- a/Baking.html
+++ b/Baking.html
@@ -25,7 +25,7 @@
         <div class="logo">Ryan Granet</div>
         <ul class="nav">
           <li>
-            <a href="Home.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="Baking.html" class="active">Baking</a>
