--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="logo">Ryan Granet</div>
         <ul class="nav">
           <li>
-            <a href="Home.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
           </li>
           <li>
             <a href="Baking.html">Baking</a>
