--- a/index.html
+++ b/index.html
@@ -4,78 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
-      integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="general.css" />
+    <link rel="stylesheet" href="nav.css" />
+    <link rel="stylesheet" href="landing.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Ryan Granet</title>
+    <title>Ryan Granet - Welcome</title>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="container">
-        <div class="logo">Ryan Granet</div>
-        <ul class="nav">
-          <li>
-            <a href="index.html" class="active">Home</a>
-          </li>
-          <li>
-            <a href="Baking.html">Baking</a>
-          </li>
-          <li>
-            <a href="#">MTG</a>
-          </li>
-          <li>
-            <a href="#">Adventures</a>
-          </li>
-          <li>
-            <a href="#">Wedding</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <header class="header">
-      <div class="container">
-        <div>
-          <h1>Welcome</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sit
-            molestiae minima ducimus repellat nemo officiis est, id eum cumque,
-            iure nihil vel facilis! Reprehenderit?
-          </p>
+    <!-- MAIN CONTAINER -->
+    <div class="margin-container">
+      <!-- NAVBAR CONTAINER-->
+      <div class="nav-bar">
+        <div class="nav-left">
+          <a href="index.html" class="logo-link">
+            <div class="nav-logo">
+              <p>RG</p>
+            </div>
+          </a>
+          <div class="nav-name-title">
+            <p class="nav-name">Ryan Granet</p>
+            <p class="nav-title">Business Systems Analyst</p>
+          </div>
         </div>
-        <img src="DSC01103.JPG" alt="" />
-      </div>
-    </header>
-
-    <section class="boxes">
-      <div class="container">
-        <div class="box basil">
-          <h2><i class="fa fa-paw" aria-hidden="true"></i> Basil</h2>
-          <p></p>
-        </div>
-        <div class="box becca">
-          <h2><i class="fa fa-heart" aria-hidden="true"></i> Fiance</h2>
-          <p></p>
-        </div>
-        <div class="box placeholder">
-          <h2><i class="fas fa-arrows-alt-v"></i> Placeholder</h2>
-          <p></p>
-        </div>
-        <div class="box adventures">
-          <h2><i class="fas fa-map"></i> Adventures</h2>
-          <p></p>
+        <div class="nav-right">
+          <ul>
+            <li><a href="about.html" class="link">About</a></li>
+            <li><a href="contact.html" class="link">Contact</a></li>
+          </ul>
         </div>
       </div>
-    </section>
+      <!-- MAIN CONTENT CONTAINER-->
+      <div class="quote-container">
+        <div class="quote">
+          <p>"A problem well stated is a problem half-solved."</p>
+        </div>
+        <div class="author">
+          <p>- Charles Kettering</p>
+        </div>
+      </div>
+      <div class="statement-container">
+        <p class="fname">Ryan</p>
+        <p class="lname">Granet</p>
+        <p class="statement">
+          Welcome to my portfolio website! As a Business Systems Analyst, I am
+          passionate about leveraging technology to drive business growth and
+          development. With expertise in data analytics, communication, and
+          collaboration, I bring a unique perspective to problem-solving and
+          deliver innovative solutions that drive successful outcomes.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
