--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="general.css" />
-    <link rel="stylesheet" href="nav.css" />
+    <!-- <link rel="stylesheet" href="nav.css" /> -->
     <link rel="stylesheet" href="landing.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Noto+Sans:wght@300;400;500&family=PT+Sans&family=Roboto:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
     <title>Ryan Granet - Welcome</title>
   </head>
-  <body>
+  <body id="background-id">
     <!-- MAIN CONTAINER -->
     <div class="margin-container">
       <!-- NAVBAR CONTAINER-->
@@ -27,10 +27,6 @@
               <p>RG</p>
             </div>
           </a>
-          <div class="nav-name-title">
-            <p class="nav-name">Ryan Granet</p>
-            <p class="nav-title">Business Systems Analyst</p>
-          </div>
         </div>
         <div class="nav-right">
           <ul>
@@ -47,17 +43,6 @@
         <div class="author">
           <p>- Charles Kettering</p>
         </div>
-      </div>
-      <div class="statement-container">
-        <p class="fname">Ryan</p>
-        <p class="lname">Granet</p>
-        <p class="statement">
-          Welcome to my portfolio website! As a Business Systems Analyst, I am
-          passionate about leveraging technology to drive business growth and
-          development. With expertise in data analytics, communication, and
-          collaboration, I bring a unique perspective to problem-solving and
-          deliver innovative solutions that drive successful outcomes.
-        </p>
       </div>
     </div>
   </body>
