--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
       <div class="break"></div>
       <div class="main-container">
         <div class="coming-soon">
-          <img src="construction.png" alt="" />
+          <img src="construction_2.png" alt="" />
           <p>Coming Soon!</p>
         </div>
       </div>
