--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="nav.css" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="contact.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
