Adding "About Me"

--- a/about.html
+++ b/about.html
@@ -4,37 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="general.css" />
-    <link rel="stylesheet" href="nav.css" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="/styles/normalize.css" />
+    <link rel="stylesheet" href="/styles/general.css" />
+    <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="/styles/about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="preconnect"
-      href="/styles/https://fonts.gstatic.com"
-      crossorigin
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Noto+Sans:wght@300;400;500&family=PT+Sans&family=Roboto:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
     <title>Ryan Granet - About Me</title>
   </head>
   <body>
-    <!-- MAIN CONTAINER -->
     <div class="margin-container">
-      <!-- NAVBAR CONTAINER-->
+      <!-- NAVIGATION -->
       <div class="nav-bar">
         <div class="nav-left">
           <a href="index.html" class="logo-link">
-            <div class="nav-logo">
-              <p>RG</p>
-            </div>
+            <div class="nav-logo">RG</div>
           </a>
-          <div class="nav-name-title">
-            <p class="nav-name">Ryan Granet</p>
-            <p class="nav-title">Business Systems Analyst</p>
-          </div>
+          <div class="nav-title">Business Systems Analyst</div>
         </div>
         <div class="nav-right">
           <ul>
@@ -43,12 +33,59 @@
           </ul>
         </div>
       </div>
-      <!-- MAIN CONTENT CONTAINER-->
       <div class="break"></div>
-      <div class="main-container">
-        <div class="coming-soon">
-          <img src="construction_2.png" alt="" />
-          <p>Coming Soon!</p>
+      <div class="about-me-container">
+        <div class="about-me-photo-container">
+          <img
+            src="/resources/Becca & Ryan-25.jpg"
+            alt=""
+            class="about-me-photo"
+          />
+        </div>
+        <div class="about-me-text">
+          <p>
+            Hi, my name is Ryan, and I'm a Business Systems Analyst based in
+            Lansing, MI. I have a passion for using technology to drive business
+            growth and development, and I believe that collaboration and
+            innovation are key to achieving successful outcomes.
+          </p>
+          <p>
+            With over 2 years of experience in the field, I have developed
+            expertise in data analytics, communication, and collaboration, which
+            allows me to work effectively with cross-functional teams to deliver
+            innovative solutions that drive business success. In my free time, I
+            enjoy pursuing my hobbies, which include hiking, fishing, mountain
+            biking, camping, woodworking, programming, and reading. I believe
+            that maintaining a healthy work-life balance is key to staying
+            creative, motivated, and engaged both in and out of the workplace.
+          </p>
+          <p>
+            I'm excited to share my skills and experiences with you and connect
+            with others who are passionate about using technology to create
+            positive change. Thank you for visiting my website, and I look
+            forward to connecting with you soon!
+          </p>
+        </div>
+      </div>
+      <div class="logo-container">
+        <div class="logo-margin">
+          <div class="msu-logo">
+            <img src="/resources/msu.png" alt="" id="logos" />
+          </div>
+          <!-- <div class="linkedin-logo">
+            <img src="/resources/LinkedIn-Blue-128@2x.png" alt="" id="logos" />
+          </div> -->
+        </div>
+      </div>
+      <div class="break" id="bottom-break"></div>
+      <div class="footer">
+        <div class="skill-icons">
+          <img src="/resources/powerbi.png" alt="" id="icon" />
+          <img src="/resources/excel.png" alt="" id="icon" />
+          <img src="/resources/sql.png" alt="" id="icon" />
+          <img src="/resources/atlasian.png" alt="" id="icon" />
+          <img src="/resources/python.png" alt="" id="icon" />
+          <img src="/resources/js-css-html.png" alt="" id="icon" />
         </div>
       </div>
     </div>
