--- a/contact.html
+++ b/contact.html
@@ -4,33 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="general.css" />
-    <link rel="stylesheet" href="nav.css" />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="/styles/normalize.css" />
+    <link rel="stylesheet" href="/styles/general.css" />
+    <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="/styles/contact.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Noto+Sans:wght@300;400;500&family=PT+Sans&family=Roboto:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Ryan Granet - Contact</title>
+    <title>Ryan Granet - About Me</title>
   </head>
   <body>
-    <!-- MAIN CONTAINER -->
     <div class="margin-container">
-      <!-- NAVBAR CONTAINER-->
+      <!-- NAVIGATION -->
       <div class="nav-bar">
         <div class="nav-left">
           <a href="index.html" class="logo-link">
-            <div class="nav-logo">
-              <p>RG</p>
-            </div>
+            <div class="nav-logo">RG</div>
           </a>
-          <div class="nav-name-title">
-            <p class="nav-name">Ryan Granet</p>
-            <p class="nav-title">Business Systems Analyst</p>
-          </div>
+          <div class="nav-title">Business Systems Analyst</div>
         </div>
         <div class="nav-right">
           <ul>
@@ -39,11 +33,11 @@
           </ul>
         </div>
       </div>
-      <!-- MAIN CONTENT CONTAINER-->
+      <!-- MAIN -->
       <div class="break"></div>
-      <div class="main-container">
-        <div class="coming-soon">
-          <img src="construction_2.png" alt="" />
+      <div class="main-div">
+        <div class="under-construction">
+          <img src="/resources/construction_2.png" alt="" />
           <p>Coming Soon!</p>
         </div>
       </div>
