added contact page

--- a/about.html
+++ b/about.html
@@ -44,26 +44,29 @@
         </div>
         <div class="about-me-text">
           <p>
-            Hi, my name is Ryan, and I'm a Business Systems Analyst based in
-            Lansing, MI. I have a passion for using technology to drive business
-            growth and development, and I believe that collaboration and
-            innovation are key to achieving successful outcomes.
+            Welcome! I'm Ryan Granet, and I specialize in helping businesses
+            leverage data and technology to achieve their goals.
           </p>
           <p>
-            With over 2 years of experience in the field, I have developed
+            With almost 3 years of experience in the field, I have developed
             expertise in data analytics, communication, and collaboration, which
             allows me to work effectively with cross-functional teams to deliver
-            innovative solutions that drive business success. In my free time, I
-            enjoy pursuing my hobbies, which include hiking, fishing, mountain
-            biking, camping, woodworking, programming, and reading. I believe
-            that maintaining a healthy work-life balance is key to staying
-            creative, motivated, and engaged both in and out of the workplace.
+            innovative solutions that drive business success.
           </p>
           <p>
-            I'm excited to share my skills and experiences with you and connect
-            with others who are passionate about using technology to create
-            positive change. Thank you for visiting my website, and I look
-            forward to connecting with you soon!
+            When I'm not working, I enjoy spending time with my fiancé, Becca,
+            and our dog, Basil. I also enjoy pursuing my hobbies, which include
+            hiking, fishing, mountain biking, camping, woodworking, programming,
+            and traveling. I believe that maintaining a healthy work-life
+            balance is key to staying creative, motivated, and engaged both in
+            and out of the workplace.
+          </p>
+          <p>
+            I'm excited to connect with others who share my passion for using
+            technology to create positive change, and I look forward to
+            exploring new opportunities and challenges in my career. Thanks for
+            visiting my website, and feel free to reach out if you'd like to
+            connect!
           </p>
         </div>
       </div>
@@ -72,18 +75,15 @@
           <div class="msu-logo">
             <img src="/resources/msu.png" alt="" id="logos" />
           </div>
-          <!-- <div class="linkedin-logo">
-            <img src="/resources/LinkedIn-Blue-128@2x.png" alt="" id="logos" />
-          </div> -->
         </div>
       </div>
       <div class="break" id="bottom-break"></div>
       <div class="footer">
         <div class="skill-icons">
+          <img src="/resources/atlasian.png" alt="" id="icon" />
           <img src="/resources/powerbi.png" alt="" id="icon" />
           <img src="/resources/excel.png" alt="" id="icon" />
           <img src="/resources/sql.png" alt="" id="icon" />
-          <img src="/resources/atlasian.png" alt="" id="icon" />
           <img src="/resources/python.png" alt="" id="icon" />
           <img src="/resources/js-css-html.png" alt="" id="icon" />
         </div>
