--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,15 @@
       <!-- NAVIGATION -->
       <div class="nav-bar">
         <div class="nav-left">
-          <a href="index.html" class="logo-link">
+          <a href="index" class="logo-link">
             <div class="nav-logo">RG</div>
           </a>
           <div class="nav-title">Business Systems Analyst</div>
         </div>
         <div class="nav-right">
           <ul>
-            <li><a href="about.html" class="link">About</a></li>
-            <li><a href="contact.html" class="link current">Contact</a></li>
+            <li><a href="about" class="link">About</a></li>
+            <li><a href="contact" class="link current">Contact</a></li>
           </ul>
         </div>
       </div>
