--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- NAVBAR CONTAINER-->
       <div class="nav-bar">
         <div class="nav-left">
-          <a href="index.html" class="logo-link">
+          <a href="index" class="logo-link">
             <div class="nav-logo">
               <p>RG</p>
             </div>
@@ -28,8 +28,8 @@
         </div>
         <div class="nav-right">
           <ul>
-            <li><a href="about.html" class="link">About</a></li>
-            <li><a href="contact.html" class="link">Contact</a></li>
+            <li><a href="about" class="link">About</a></li>
+            <li><a href="contact" class="link">Contact</a></li>
           </ul>
         </div>
       </div>
