--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
           <div>
             <input type="hidden" name="_next" value="https://ryangranet.com" />
             <input type="hidden" name="_template" value="table" />
-            <input type="hidden" name="_captcha" value="false" />
+            <input type="hidden" name="_captcha" value="true" />
           </div>
 
           <br />
