--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         </div> -->
         <div class="nav-logo" id="contact-logo">RG</div>
         <form
-          action="https://formsubmit.co/granet.ry@gmail.com"
+          action="https://formsubmit.co/f04fe7207c5b5af3963686ba314016de"
           method="post"
           class="form-container"
         >
